Fixed general layout issues

--- a/components/Common/FeedbackForm/FormContainer/styles.module.scss
+++ b/components/Common/FeedbackForm/FormContainer/styles.module.scss
@@ -2,9 +2,8 @@
 
 .form {
   width: 100%;
-  max-height: auto;
   color: rgba($dark-grey, 0.3);
-  margin-bottom: 200px;
+  //margin-bottom: 200px;
 
   @include flex(column, initial, center);
 
