--- a/components/ContactUsCommon/CompanyPlacement/Map/styles.module.scss
+++ b/components/ContactUsCommon/CompanyPlacement/Map/styles.module.scss
@@ -2,12 +2,17 @@
 @import "styles/utils/mixins";
 
 .map {
-  box-shadow: 0 10px 60px -10px rgba(0, 0, 0, 0.15);
   height: 732px;
   position: relative;
 
   @include tablet {
     height: 480px;
+    margin: 0 -40px;
+  }
+
+  @include phone {
+    margin: 0 -15px;
+    height: 274px;
   }
 
   .controlPanel {
