--- a/containers/ContactUs/styles.module.scss
+++ b/containers/ContactUs/styles.module.scss
@@ -1,15 +1,15 @@
 @import 'styles/utils/mixins';
 
 .pageIntro {
-  padding: 100px 0 0;
+  padding: 30px 0 150px;
+
+  @include tablet {
+    padding: 10px 0 80px;
+  }
 
   @include flex();
 
   @include tablet {
     @include flex(column);
-  }
-
-  @include phone {
-    padding: 60px 0;
   }
 }
